frontend/test/should_fail/index_asArrayAscending_missing_where_index_expected.grg
rule i(ref s:array<Node>) {
	if{ nodesFromIndexAsArrayAscending(s).size() > 0; }
	
	modify {
	}
}
